provide fix for hd header fix, adjust font-alignment, social margin

--- a/src/stylesheets/modules/header.sass
+++ b/src/stylesheets/modules/header.sass
@@ -58,7 +58,7 @@
 	top: 0
 	right: 0
 	padding: inherit
-	margin: 0 15px 2px
+	margin: 0 2% 2%
 	width: 25%
 	height: 50px
 	text-align: right
@@ -76,6 +76,9 @@
 .mail
 	height: 50%
 	width: auto
+
+.work.shrink.header
+	height: 165px
 
 @media (max-width: 1000px)
 	.button
@@ -134,3 +137,5 @@
 		height: 25%
 	.social
 		padding: 2px   
+	.work.shrink.header
+		height: 120px
