--- a/src/stylesheets/modules/showcase.sass
+++ b/src/stylesheets/modules/showcase.sass
@@ -10,7 +10,7 @@
   width: 500px
   box-sizing: border-box
   margin: auto
-  text-align: justify
+  text-align: left
 
 .name
   font-weight: bold
